# mops-examples

./: README.md
emodlib-demo/: .gitignore  .modelopsignore  README.md  generate_observed_data.py  preflight_check.py  pyproject.toml  run_local_sweep.py  study_small.json  test_integration.py  test_model.py  test_multi_replicate.py
emodlib-demo/data/: observed_prevalence.csv
emodlib-demo/models/: emod_malaria.py
emodlib-demo/targets/: prevalence_by_age.py
