[project]
name = "emodlib-demo"
version = "0.1.0"
description = "EMOD malaria model calibration example for ModelOps"
requires-python = ">=3.12"
dependencies = [
    "modelops-contracts@git+https://github.com/institutefordiseasemodeling/modelops-contracts.git",
    "modelops-calabaria@git+https://github.com/institutefordiseasemodeling/modelops-calabaria.git",
    "emodlib>=0.0.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
emodlib = { index = "test-pypi" }

[tool.modelops-bundle]
# Models will be added here by 'mops-bundle discover --save'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["models", "targets", "data", "*.py", "*.toml", "*.txt", "*.md", "*.csv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
